--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,7 +146,7 @@ img {
 
 .navigation-link {
   margin: 0 14px;
-  padding: 20px 0;
+  padding: 20px 0 18px;
 }
 
 .navigation-index .navigation-link-active,
@@ -224,10 +224,10 @@ img {
 /* main */
 .hero {
   background-color:var(--black-darker);
-  background-image: url("../images/hero-bg.png");
+  background-image:  url("../images/hero-decoration-bg.svg"), url("../images/hero-bg.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
+  background-size: 1200px auto, cover;
+  background-position: center bottom , center;
 }
 
 .hero-image {
@@ -248,7 +248,8 @@ img {
 }
 
 .info-title {
-  width: 800px;
+  // width: 800px;
+  width: 650px;
   margin: 70px auto 24px;
   padding: 0 20px;
   font-size: 30px;
@@ -468,7 +469,7 @@ img {
 }
 
 .hotel-search-text {
-  width: 580px;
+  width: 600px;
   margin-top: 0;
   margin-bottom: 54px;
   padding: 0;
@@ -488,6 +489,7 @@ img {
   color: var(--basic-white);
   background-color: var(--reddish-brown);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .hotel-search-btn:hover,
@@ -594,6 +596,7 @@ img {
   background-color: var(--basic-blue-gray);
   border:none;
   border-radius: 0 4px 4px 0;
+  cursor: pointer;
 }
 
 .subscribe-form-btn:hover {
@@ -795,6 +798,9 @@ height: 13px;
   // border: none;
 }
 
+.button {
+  cursor: pointer;
+}
 // .toggle {
 //   display: inline-block;
 // }
